Fix search filters showing twice on mobile.

--- a/public/app/themes/justice/src/sass/app/_layout-one-sidebar.scss
+++ b/public/app/themes/justice/src/sass/app/_layout-one-sidebar.scss
@@ -57,6 +57,13 @@
                 display: none;
             }
         }
+        
+        &--desktop {
+            display: none;
+            @media screen and (min-width: mixins.$justice-lg) {
+                display: flex;
+            }
+        }
     }
 
     &--right {
